# vehicleLicensePlateRecognition

./: CMakeLists.txt  Makefile  YUYV_to_bmp.cc  get_vedio_yuv_to_bmp.cc  main  main.cc  touch.c
bulid/: CMakeCache.txt  Makefile  cmake_install.cmake  main
inc/: DRMwrap.h
lib/: DRMwrap.c  Makefile
